--- a/kooplexhub/container/templates/attachment_list.html
+++ b/kooplexhub/container/templates/attachment_list.html
@@ -2,12 +2,16 @@
 {% load static %}
 
 {% block realcontent %}
+{% if attachments %}
   <input class="form-control me-2 mb-3 mt-3" type="text" id="search_attachment" placeholder="Search attachment" title="Type in a name" autofocus >
   <div id="attachmentListPane" >
   {% for attachment in attachments %}
     {% include 'attachment_partial_list.html' %}
   {% endfor %}
   </div>    
+{% else %}
+  {% include 'empty.html' %}
+{% endif %}
 {% endblock %}
 
 {% block scripts %}
