get rid of filesystem task in favor of celery task scheduler

--- a/kooplexhub/container/templates/container_layout.html
+++ b/kooplexhub/container/templates/container_layout.html
@@ -5,6 +5,9 @@
 
 {% block page_title %}Kooplex Environment{% endblock %}
 
+{% block help %} 
+{% include 'containerhelp.html' %}
+  {% endblock %}
 
 
 {% block submenu %}
