--- a/kooplexhub/container/templates/storage_layout.html
+++ b/kooplexhub/container/templates/storage_layout.html
@@ -3,7 +3,12 @@
 {% load static %}
 {% load project_buttons %}
 
-{% block page_title %}Kooplex Environment{% endblock %}
+{% block page_title %}Kooplex Storage{% endblock %}
+
+
+{% block help %} 
+{% include 'storagehelp.html' %}
+  {% endblock %}
 
 
 
