--- a/kooplexhub/education/templates/education_layout.html
+++ b/kooplexhub/education/templates/education_layout.html
@@ -13,6 +13,12 @@
 </style>
 {% endblock %}
 
+{% block help %} 
+{% include 'educationhelp.html' %}
+
+  {% endblock %}
+
+
 {% block submenu %}
 <ul class="navbar-nav flex-row flex-md-row">
   <li class="ms-3 nav-item text-center">
