--- a/kooplexhub/project/templates/project_layout.html
+++ b/kooplexhub/project/templates/project_layout.html
@@ -14,6 +14,13 @@
 </style>
 {% endblock %}
 
+
+{% block help %} 
+{% include 'projecthelp.html' %}
+
+  {% endblock %}
+
+
 {% block submenu %}
 <ul class="navbar-nav flex-row flex-md-row">
   <li class="ms-3 nav-item text-center">
