--- a/kooplexhub/education/templates/educationhelp.html
+++ b/kooplexhub/education/templates/educationhelp.html
@@ -24,7 +24,7 @@ left: 0;
    <div class="modal-dialog modal-dialog-centered col-8">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalToggleLabel">Help Education</h5>
+          <h5 class="modal-title" id="exampleModalToggleLabel">Help: Education</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body row">
