--- a/kooplexhub/project/templates/projecthelp.html
+++ b/kooplexhub/project/templates/projecthelp.html
@@ -24,7 +24,7 @@ left: 0;
    <div class="modal-dialog modal-dialog-centered col-8">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalToggleLabel">Help Project</h5>
+          <h5 class="modal-title" id="exampleModalToggleLabel">Help: Projects</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body row">
@@ -50,7 +50,7 @@ left: 0;
     </div>
     <div class="carousel-item">
         <div class="container-fluid">
-            <p>List project:  Use the search bar on the top of the page to filter them.</p> 
+            <p>List project: Use the search bar on the top of the page to filter them.<br><a class="btn btn-danger btn-sm" type="button" href="#"><i class="bi bi-boxes"></i></a> indicates that this project is not associated to any environment yet.</p> 
             <img class="w-100" src="/static/printproject_hlist.png" alt="print home">
         </div>
     </div>
