--- a/kooplexhub/report/templates/configure.html
+++ b/kooplexhub/report/templates/configure.html
@@ -1,4 +1,4 @@
-{% extends "container_layout.html" %}
+{% extends "report_layout.html" %}
 {% load render_table from django_tables2 %}
 {% load static %}
 {% load extras %}
